fix: remove non existing sh package

--- a/alpine-rsync-inotify/Dockerfile
+++ b/alpine-rsync-inotify/Dockerfile
@@ -3,7 +3,8 @@ FROM alpine:latest
 
 # Install rsync and inotify-tools (which provides inotifywait)
 # We use --no-cache to keep the image small
-RUN apk add --no-cache rsync inotify-tools bash sh
+# Note: sh is already included in Alpine base image
+RUN apk add --no-cache rsync inotify-tools bash
 
 # Set a default command (can be overridden in Kubernetes)
 CMD ["rsync", "--version"]
